--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -1,9 +1,7 @@
-version: "3.9"
-
 services:
 
     traefik:
-        image: traefik:v2.11
+        image: traefik:3.3
         container_name: traefik
         restart: always
         command:
@@ -26,7 +24,6 @@ services:
               mode: host
         networks:
             - traefik-public
-            - default
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock:ro
             - traefik-public-certs:/certs
@@ -34,7 +31,7 @@ services:
             - traefik.enable=true
             - traefik.docker.network=traefik-public
 
-            - traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)
+            - traefik.http.routers.http-catchall.rule=HostRegexp(`.+`)
             - traefik.http.routers.http-catchall.entryPoints=http
             - traefik.http.routers.http-catchall.middlewares=redirect-to-https
             - traefik.http.services.http-catchall.loadBalancer.server.port=80
