--- a/vpn/Makefile
+++ b/vpn/Makefile
@@ -1,4 +1,4 @@
-init: docker-down docker-pull docker-network docker-build docker-up
+init: docker-down docker-pull docker-build docker-up
 
 up: docker-up
 down: docker-down
@@ -15,6 +15,3 @@ docker-pull:
 
 docker-build:
 	docker compose build --pull
-
-docker-network:
-	docker network create traefik-public || true
